fix: lti vars
